<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFF"
        android:gravity="center_horizontal"
        android:isScrollContainer="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="30dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/perfil_titulo"
                android:textColor="#000"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#000" />

            <TextView
                android:id="@+id/correo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:textColor="#000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_primario"
                android:hint="@string/perfil_nombre"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/apellido"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_primario"
                android:hint="@string/perfil_apellido"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="13sp" />

            <RadioGroup
                android:id="@+id/sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/sexo1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/perfil_sex1"
                    android:textSize="13sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#000" />

                <RadioButton
                    android:id="@+id/sexo2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/perfil_sex2"
                    android:textSize="13sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/fecha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_primario"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/perfil_fechaNac"
                android:singleLine="true"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/pais"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_primario"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/perfil_pais"
                android:singleLine="true"
                android:textSize="13sp" />

            <Spinner
                android:id="@+id/paisSpinner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:entries="@array/perfil_country_arrays"
                android:prompt="@string/perfil_country_prompt"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/conenedorContrasena"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/perfil_changePass"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#000" />

                <EditText
                    android:id="@+id/passActual"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_primario"
                    android:hint="@string/perfil_passCurrent"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/pass1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_primario"
                    android:hint="@string/perfil_pass1"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/pass2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_primario"
                    android:hint="@string/perfil_pass2"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="13sp" />
            </LinearLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_next"
                android:clickable="true" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/dummieAlign"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#FFF"
        android:orientation="vertical" >

    </LinearLayout>

</LinearLayout>