<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/fondo_textura"
        android:gravity="center_horizontal"
        android:isScrollContainer="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="50dp" >

            <EditText
                android:id="@+id/correo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/textfile_background"
                android:hint="@string/registro_correo"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/textfile_background"
                android:hint="@string/registro_contrasena"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/pass2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/textfile_background"
                android:hint="@string/registro_c_contrasena"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|right" >

                <CheckBox
                    android:id="@+id/terminosCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/terminos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/registro_terms"
                    android:textColor="#fff"
                    android:textSize="13sp" />
            </LinearLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/boton_continuar"
                android:clickable="true" />
        </LinearLayout>
    </ScrollView>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#000"
        android:gravity="center" >

        <TextView
            android:id="@+id/resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_resend"
            android:textColor="@color/textview_pressed_color"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>